--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,3 +1,8 @@
+/*
+	Login CSS configuration of Rust-UCI(RUCI).
+	SPDX-License-Identifier: WTFPL
+*/
+
 #username {
 	position: absolute;
 	left: calc(50% - 96px);
@@ -57,4 +62,19 @@
 	padding: 0;
 	margin: 0;
 	display: flex;
+}
+
+#background_blur {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	margin: 0;
+	padding: 0;
+	top: 0;
+	left: 0;
+	transition: filter 0.3s;
+	background-image:url(/images/defaultbackground.jpg);
+	background-repeat:no-repeat;
+	background-size:100%;
+	background-attachment:fixed;
 }
