--- a/static/css/framework.css
+++ b/static/css/framework.css
@@ -3,16 +3,6 @@
 	SPDX-License-Identifier: WTFPL
 */
 
-body {
-	background-image:url(../images/defaultbackground.jpg);
-	background-repeat:no-repeat;
-	background-size:100%;
-	background-attachment:fixed;
-	user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-}
-
 #master_container {
 	width: 280px;
 	position: absolute;
@@ -21,15 +11,54 @@ body {
 	top: 0;
 	left: 0;
 	padding-left: 0.8em;
-	padding-top: 0.8em;
 }
 
 #detail_container {
 	max-width: 1000px;
 	position: relative;
-	background-color: rgba(255, 255, 255, 0.2);
-	height: inherit;
+	height: calc(100% - 40px - 2em);
 	margin: 0 auto;
+}
+
+#detail_container_real {
+	background-color: rgba(255, 255, 255, 0.2);
+	height: 100%;
+}
+
+.section_header {
+	height:64px;
+	width: 100%;
+	transition: background-color 0.2s;
+	display: flex;
+	align-items: center;
+	position: relative;
+	border-bottom: 2px solid #e5e5e5;
+}
+
+.section_header:hover {
+	background-color: rgba(255, 255, 255, 0.8);
+}
+
+.section_header .expand_icon {
+	height: 24px;
+	right: 16px;
+	rotate: 180deg;
+	transition: rotate 0.2s;
+	position: absolute;
+}
+
+.section_header .section_icon {
+	height: 24px;
+	margin-left: 12px;
+	margin-right: 24px;
+}
+
+.section_header button {
+	position: absolute;
+	right: 52px;
+	min-width: 92px;
+	height: 32px;
+	border: 2px solid #e5e5e5;
 }
 
 #detail_wrapper {
@@ -40,6 +69,13 @@ body {
 	width: calc(100% - 300px - 0.8em);
 	padding-left: 10px;
 	padding-right: 10px;
+}
+
+#detail_content_title {
+	font-size: 28px;
+	font-family: Arial, system-ui, sans-serif;
+	margin-top: 24px;
+	margin-bottom: 0.5em;
 }
 
 .avatar_container {
@@ -95,4 +131,30 @@ body {
 	height: 24px;
 	margin-right: 0.7em;
 	margin-bottom: -6px;
+}
+
+.section_wrapper {
+	background-color: rgba(255, 255, 255, 0.8);
+	margin-top: 4px;
+	margin-bottom: 4px;
+	border: 1px solid #e5e5e5;
+	border-radius: 4px;
+	overflow: hidden;
+	height:max-content;
+	transition: height 0.2s; /* Not working */
+	font-family: Arial, system-ui, sans-serif;
+}
+
+.section_content {
+	margin: 12px;
+	margin-left: 60px;
+}
+
+.property_name {
+	width: 120px;
+	line-height: 1.5em;
+}
+
+.property_value {
+	color:gray
 }
